# SciFortran

./: .buildinfo  .gitignore  CMakeLists.txt  Makefile  README.md  distclean.cmake  docs.config  f-modindex.html  fpm.rsp  fpm.toml  genindex.html  index.html  install  install.sh  install_scifor.sh  lib.mk  libdmft.mk  objects.inv  search.html  searchindex.js  src  update
.doctrees/: environment.pickle  index.doctree
_install/: Makefile  make.inc
_sources/: index.rst.txt
_static/: documentation_options.js
cmake/: BuildPkgConfigFile.cmake  DistClean.cmake  FindMKL.cmake  FindSCALAPACK.cmake  FortranCompilerConfig.cmake  GitConfig.cmake  MainConfig.cmake  MpiConfig.cmake  PostConfig.cmake
doc/: conf.py
etc/: lib.mk  library.conf  makefile.template  mylibvars.sh  scifor.pc  scifor.pc.in  scifor_config_global.sh.in  scifor_config_user.sh.in
include/: options.inc  sfmake.inc
interface/: adaptive_mix.html  allgather_mpi.html  allreduce_mpi.html  append.html  append_to_input_list.html  as_sparse.html  as_sparse~2.html  assert_shape.html  assert_shape~2.html  assignment(=).html  assignment(=)~2.html  assignment(=)~3.html  bcast_mpi.html  broyden_mix.html  broydn_func.html  build_tridiag.html  cgfit_fjac.html  cgfit_func.html  cgradient.html  check_tridiag.html  cjacobian.html  cosft.html  cosftn.html  cosftn~2.html  cosft~2.html  create_dir.html  cross_product.html  cubic_spline.html  curvefit.html  dbrent.html  det.html  deye.html  dgradient.html  diag.html  diagonal.html  djacobian.html  eig.html  eigh.html  eigh_jacobi.html  eigvals.html  (+183 more)
lists/: absint.html  files.html  modules.html  procedures.html  types.html
module/: broyden_func_interface.html  broyden_routines.html  cgfit_routines.html  fft_fftpack.html  gauss_quadrature.html  interpolate_nr.html  interpolate_nr~2.html  iofile.html  ioplot.html  ioread.html  list_input.html  scifor.html  sf_arrays.html  sf_blacs.html  sf_colors.html  sf_constants.html  sf_derivate.html  sf_fft_fftpack.html  sf_fonts.html  sf_integrate.html  sf_interpolate.html  sf_iotools.html  sf_linalg.html  sf_misc.html  sf_mpi.html  sf_optimize.html  sf_parse_input.html  sf_random.html  sf_sp_linalg.html  sf_sparse.html  sf_sparse_array_algebra.html  sf_sparse_array_coo.html  sf_sparse_array_csc.html  sf_sparse_array_csr.html  sf_sparse_common.html  sf_special.html  sf_spin.html  sf_stat.html  sf_timer.html
proc/: active.html  add_colors.html  addabs.html  airya.html  airya~2.html  airyb.html  airyb~2.html  airyzo.html  airyzo~2.html  ajyik.html  ajyik~2.html  append_d.html  append_i.html  append_z.html  arange.html  assert_eq2.html  assert_eq2~2.html  assert_eq4.html  assert_eqn.html  aswfa.html  aswfa~2.html  aswfb.html  aswfb~2.html  banfac.html  banfac~2.html  banslv.html  banslv~2.html  barrier_mpi.html  bchfac.html  bchfac~2.html  bchslv.html  bchslv~2.html  bernoa.html  bernoa~2.html  bernob.html  bernob~2.html  betaf.html  betaf~2.html  betarnd.html  betarnd~2.html  (+1681 more)
scifor/: makefile.template
scifor_documentation/: 01_dependencies.html  02_installation.html  03_modules.html  scifor.html
sourcefile/: adaptive_mix.f90.html  arpack_c.f90.html  arpack_d.f90.html  brent.f90.html  broyden1.f90.html  broyden_mix.f90.html  cgblas.f.html  cgfam.f.html  cgsearch.f.html  curvefit.f90.html  derivate_fjacobian_c.f90.html  derivate_fjacobian_d.f90.html  dvdson.f.html  dvdson_serial.f90.html  fft_fftpack.f90.html  fmin_bfgs.f90.html  fmin_cg.f90.html  fmin_cg_cgplus.f90.html  fmin_cg_minimize.f90.html  fmin_nelder_mead.f90.html  froot_scalar.f90.html  fsolve.f90.html  functions_bethe.f90.html  functions_wofz.f90.html  functions_zerf.f90.html  gauss_quadrature.f90.html  histogram.f90.html  integrate_func_1d.f90.html  integrate_func_2d.f90.html  integrate_quad_func.f90.html  integrate_quad_sample.f90.html  integrate_sample_1d.f90.html  integrate_sample_2d.f90.html  interpolate_cubspl_routines.f90.html  interpolate_finter_1d.f90.html  interpolate_finter_2d.f90.html  interpolate_nr.f90.html  interpolate_pack.f90.html  interpolate_pppack.f90.html  iofile.f90.html  (+92 more)
src/: ARRAYS.f90  BRENT.f90  BROYDEN.f90  CGBLAS.f  CGFAM.f  CGFIT.f90  CGSEARCH.f  CMakeLists.txt  COMVARS.f90  CONSTANTS.f90  DERIVATE.f90  ERROR.f90  FFTGF.f90  FFTGF_FFTPACK.f90  FFTGF_FFTW3.f90  FFTGF_MKL.f90  FFTGF_NR.f90  FFT_FFTPACK.f90  FFT_MKL.f90  FUNCTIONS.f90  INTEGRATE.f90  INTERPOLATE.f90  IOFILE.f90  IOPLOT.f90  IOREAD.f90  MATRIX.f90  MKL  Makefile  OPTIMIZE.f90  OPTIMIZE_MINIMIZE.f90  OPTIMIZE_ROOT_FINDING.f90  PADE.f90  PARSECMD.f90  PARSE_INPUT.f90  PARSE_LIST_INPUT.f90  RANDOM.f90  SCIFOR.f90  SCIFOR_VERSION.f90  SF_ARRAYS.f90  SF_CONSTANTS.f90  (+79 more)
src/SF_INTERPOLATE/: CMakeLists.txt  Makefile  SF_INTERPOLATE.f90  SF_INTERPOLATE_NR.f90  SF_INTERPOLATE_PACK.f90  SF_INTERPOLATE_PPPACK.f90  interpolate_finter_2d.f90  interpolate_pppack.f90
src/SF_INTERPOLATE/include/: interpolate_finter_1d.f90
src/SF_OPTIMIZE/: CMakeLists.txt  Makefile  OPTIMIZATION.f90  OPTIMIZE_MINIMIZE.f90  OPTIMIZE_ROOT_FINDING.f90  ROOT_FINDING.f90  SF_OPTIMIZE.f90  adaptive_mix.f90  broyden1.f90  cgfam.f  fmin_Nelder_Mead.f90  fmin_bfgs.f90  fmin_cg.f90  fsolve.f90  fsolve_error.h90  leastsq.f90  leastsq_error.h90  linear_mix.f90  minimize_krauth.f  minimize_sascha.f  optimize_cgfit_routines.f90
src/SF_OPTIMIZE/include/: brent.f90  broyden1.f90  broyden_mix.f90  curvefit.f90  fmin_cg.f90  fmin_cg_cgplus.f90  fmin_cg_minimize.f90  froot_scalar.f90  fsolve.f90
src/arpack/: ARmake.inc  CMakeLists.txt  LICENSE  Makefile  zdotc.patch  zdotc.sh
src/arpack/parpack/src/: Makefile  pzgetv0.f  pznaitr.f  pznaup2.f  pzneupd.f
src/arpack/parpack/util/: Makefile  mpif.h.OLD
src/arpack/src/: Makefile  zgetv0.f  znaitr.f  znaup2.f  zneupd.f
src/arpack/util/: Makefile  second.f
src/blas/: CMakeLists.txt  Makefile
test/: Makefile  test.sh
tools/: bash_tools.sh
type/: finter2d_type~2.html  finter_type.html  histogram.html  input_list.html  pdf_kernel.html  pdf_kernel_2d.html  rgb_color.html  sf_sparse_cmatrix_coo.html  sf_sparse_dmatrix_coo.html  sparse_dmatrix_csc.html  sparse_dmatrix_csr.html  (+3 more)
(+1213 files in other folders)
