# SF_INTERPOLATE library
file(GLOB SF_INTERPOLATE_LOCAL_SRC
  "SF_INTERPOLATE_PPPACK.f90"
  "SF_INTERPOLATE_PACK.f90"
  "SF_INTERPOLATE_NR.f90"
  "SF_INTERPOLATE.f90"
  )

include_directories(include)

SET(SF_INTERPOLATE_src ${SF_INTERPOLATE_LOCAL_SRC})
ADD_LIBRARY(SF_INTERPOLATELIB OBJECT ${SF_INTERPOLATE_src})
